--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ body {
   border-radius: 8px;
   padding: 1em;
 }
+.large-text{
+    font-size: 20px;
+}
 .quote {
   color: #cfcfcf;
   margin-top: 1rem;
